--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
   <title>VizualRx</title>
-  <base href="/">
+  <meta charset="utf-8">
+  <meta name="description" content="Explore RxJS visually: experiment with operators, visualize data flows, and deepen your understanding of reactive programming in real-time.">
+  <meta name="keywords" content="RxJS, VizualRx, Reactive Programming, Operators, Lean RxJS, Marble Diagram">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="icon" type="image/svg+xml" href="icon.svg">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
